# docs/swagger.yaml
@@ -1,20 +1,52 @@
 basePath: /
 definitions:
+  controller.ErrorResponse:
+    properties:
+      code:
+        type: integer
+      errors:
+        additionalProperties:
+          type: string
+        type: object
+    type: object
+  controller.MessageResponse:
+    properties:
+      code:
+        type: integer
+      message:
+        type: string
+    type: object
+  controller.TokenResponse:
+    properties:
+      code:
+        type: integer
+      token:
+        type: string
+    type: object
+  models.Person:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    required:
+    - name
+    type: object
   models.User:
     properties:
       email:
         type: string
       id:
         type: integer
-      name:
-        type: string
       password:
         type: string
-      password_hash:
+      person:
+        $ref: '#/definitions/models.Person'
+        type: object
+      phone:
         type: string
     required:
     - email
-    - name
     - password
     type: object
 info:
@@ -47,65 +79,126 @@ paths:
       produces:
       - application/x-www-form-urlencoded
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/controller.TokenResponse'
         "400":
-          description: ok
+          description: Bad credentials
           schema:
             type: string
-        "404":
-          description: ok
-          schema:
-            type: string
-        "500":
-          description: ok
-          schema:
-            type: string
-      summary: User Create
+      summary: Login
       tags:
       - Security
   /register:
     post:
       consumes:
-      - application/json
-      description: do ping
+      - application/x-www-form-urlencoded
+      description: Register User
       parameters:
-      - description: Add account
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
+      - description: username
+        in: formData
+        name: username
+        type: string
+      - description: password
+        in: formData
+        name: password
+        type: string
       produces:
-      - application/json
+      - application/x-www-form-urlencoded
       responses:
-        "201":
-          description: Created
+        "200":
+          description: ok
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/controller.TokenResponse'
         "400":
-          description: ok
+          description: error
           schema:
-            type: string
-        "404":
-          description: ok
+            $ref: '#/definitions/controller.ErrorResponse'
+        "409":
+          description: user exists
           schema:
-            type: string
-        "500":
-          description: ok
-          schema:
-            type: string
-      summary: User Create
+            $ref: '#/definitions/controller.MessageResponse'
+      summary: Register
       tags:
       - Security
   /restore:
     post:
       consumes:
+      - application/x-www-form-urlencoded
+      description: do ping
+      parameters:
+      - description: username
+        in: formData
+        name: username
+        type: string
+      produces:
+      - application/x-www-form-urlencoded
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.MessageResponse'
+        "400":
+          description: Bad credentials
+          schema:
+            type: string
+        "404":
+          description: Not fount
+          schema:
+            type: string
+      summary: Restore
+      tags:
+      - Security
+  /user:
+    get:
+      consumes:
+      - application/json
+      description: User
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: bad request
+          schema:
+            type: string
+        "401":
+          description: error
+          schema:
+            type: string
+        "404":
+          description: Not fount
+          schema:
+            type: string
+        "500":
+          description: error
+          schema:
+            type: string
+      security:
+      - bearerAuth: []
+      summary: User Get
+      tags:
+      - Security
+    put:
+      consumes:
       - application/json
       description: do ping
       parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
       - description: Add account
         in: body
         name: user
@@ -115,8 +208,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/models.User'
         "400":
@@ -131,7 +224,50 @@ paths:
           description: ok
           schema:
             type: string
-      summary: User Create
+      security:
+      - bearerAuth: []
+      summary: Update User
+      tags:
+      - Security
+  /userpass:
+    put:
+      consumes:
+      - application/json
+      description: do ping
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Add account
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: ok
+          schema:
+            type: string
+        "404":
+          description: ok
+          schema:
+            type: string
+        "500":
+          description: ok
+          schema:
+            type: string
+      security:
+      - bearerAuth: []
+      summary: Update User Pass
       tags:
       - Security
   /users:
@@ -300,7 +436,7 @@ paths:
             type: string
       security:
       - bearerAuth: []
-      summary: User Create
+      summary: User Update
       tags:
       - Users
 securityDefinitions:
